--- a/src/app/modules/product/components/product/product.component.html
+++ b/src/app/modules/product/components/product/product.component.html
@@ -1,15 +1,21 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title>{{ product.title | titlecase }}</mat-card-title>
+    <mat-card-title>
+      {{ product["fields"]["nombre"] | titlecase }}
+    </mat-card-title>
     <mat-card-subtitle>
-      {{ product.price | currency: "USD":"symbol":"1.2-2" }}
+      {{ product["fields"]["precio"] | currency: "USD":"symbol":"1.2-2" }}
     </mat-card-subtitle>
   </mat-card-header>
   <div class="crop-image">
-    <img mat-card-image [src]="product.image" [alt]="product.title" />
+    <img
+      mat-card-image
+      [src]="product['fields']['foto']['fields']['file']['url']"
+      [alt]="product['fields']['nombre']"
+    />
   </div>
   <mat-card-content>
-    <p>{{ product.description | slice: 0:10 }}</p>
+    <p>{{ product["fields"]["descripcion"] | slice: 0:10 }}</p>
   </mat-card-content>
   <mat-card-actions>
     <a mat-raised-button [routerLink]="['/products', product.id]">
