--- a/src/app/modules/order/components/order/order.component.html
+++ b/src/app/modules/order/components/order/order.component.html
@@ -6,17 +6,21 @@
       <div class="row" *ngFor="let product of products">
         <div class="col-xs-12 col-sm-2 col-md-2">
           <div class="box">
-            <img class="image" [src]="product.image" alt="" />
+            <img
+              class="image"
+              [src]="product['fields']['foto']['fields']['file']['url']"
+              alt=""
+            />
           </div>
         </div>
         <div class="col-xs-12 col-sm-5 col-md-5">
           <div class="box">
-            {{ product.title }}
+            {{ product["fields"]["nombre"] }}
           </div>
         </div>
         <div class="col-xs-12 col-sm-5 col-md-5">
           <div class="box">
-            {{ product.price }}
+            {{ product["fields"]["precio"] }}
           </div>
         </div>
       </div>
