--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -10,6 +10,9 @@
           >Contact</a
         >
       </nav>
+      <button mat-raised-button color="primary" (click)="logout()">
+        Cerrar sesión
+      </button>
       <a
         routerLink="/order"
         mat-raised-button
