--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -7,21 +7,49 @@
       <div class="row">
         <div class="col-xs">
           <mat-form-field>
-            <input placeholder="email" formControlName="email" matInput type="email">
+            <input
+              placeholder="username"
+              formControlName="username"
+              matInput
+              type="text"
+            />
           </mat-form-field>
         </div>
       </div>
       <div class="row">
         <div class="col-xs">
           <mat-form-field>
-            <input placeholder="password" formControlName="password" matInput type="password">
+            <input
+              placeholder="email"
+              formControlName="email"
+              matInput
+              type="email"
+            />
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs">
+          <mat-form-field>
+            <input
+              placeholder="password"
+              formControlName="password"
+              matInput
+              type="password"
+            />
           </mat-form-field>
         </div>
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button [disabled]="form.invalid" mat-raised-button type="submit">Registro</button>
+      <button [disabled]="form.invalid" mat-raised-button type="submit">
+        Registro
+      </button>
     </mat-card-actions>
+
+    <h3>¿Ya tienes cuenta?</h3>
+    <button mat-raised-button color="primary" routerLink="../login">
+      Ingresa aquí
+    </button>
   </mat-card>
-  
 </form>
