--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,8 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+// form {
+//   display: flex;
+//   justify-content: center;
+// }
