--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -38,5 +38,8 @@
     <button mat-raised-button color="primary" routerLink="../register">
       Regístrate
     </button>
+    <!-- <button mat-raised-button color="primary" (click)="facebook()">
+      No c k ase esto
+    </button> -->
   </mat-card>
 </form>
