--- a/src/app/modules/home/components/banner/banner.component.html
+++ b/src/app/modules/home/components/banner/banner.component.html
@@ -1,7 +1,7 @@
 <div class="swiper-container">
   <div class="swiper-wrapper">
     <div class="swiper-slide" *ngFor="let img of images">
-      <img [src]="img" alt="imagen de banner" />
+      <img [src]="img" class="imagenBanner" alt="imagen de banner" />
     </div>
   </div>
 </div>
