--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,120 @@
 /* You can add global styles to this file, and also import other style files */
 
 // Mobile First
+/* .mat-toolbar.mat-primary {
+  background: rgba(0, 132, 87, 1);
+}
+.mat-fab.mat-primary,
+.mat-flat-button.mat-primary,
+.mat-mini-fab.mat-primary,
+.mat-raised-button.mat-primary {
+  background-color: rgba(0, 132, 87, 1);
+}
 
+footer[_ngcontent-osm-c64] {
+  padding: 50px 0;
+  margin-top: 20px;
+  background-color: rgba(0, 132, 87, 1);
+}
+nav[_ngcontent-osm-c63] > a.active[_ngcontent-osm-c63] {
+  background-color: rgb(0, 172, 92);
+}
+nav[_ngcontent-srj-c203] > a.active[_ngcontent-srj-c203] {
+  background-color: rgb(0, 172, 92);
+} */
+
+@import "~@angular/material/theming";
+
+// Be sure that you only ever include 'mat-core' mixin once!
+// it should not be included for each theme.
+@include mat-core();
+
+/* For use in src/lib/core/theming/_palette.scss */
+/* For use in src/lib/core/theming/_palette.scss */
+$md-mcgpalette0: (
+  50: #e0f0eb,
+  100: #b3dacd,
+  200: #80c2ab,
+  300: #4da989,
+  400: #269670,
+  500: #008457,
+  600: #007c4f,
+  700: #007146,
+  800: #00673c,
+  900: #00542c,
+  A100: #86ffba,
+  A200: #53ff9d,
+  A400: #20ff7f,
+  A700: #07ff71,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #ffffff,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #000000,
+  ),
+);
+
+/* For use in src/lib/core/theming/_palette.scss */
+$md-mcgpalette1: (
+  50: #edf6f3,
+  100: #d2e8e0,
+  200: #b4d9cc,
+  300: #95c9b8,
+  400: #7fbea8,
+  500: #18a555,
+  600: #60ab91,
+  700: #55a286,
+  800: #4b997c,
+  900: #3a8a6b,
+  A100: #dafff0,
+  A200: #a7ffdb,
+  A400: #74ffc7,
+  A700: #5affbd,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #000000,
+    500: #000000,
+    600: #000000,
+    700: #000000,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #000000,
+  ),
+);
+
+// mandatory stuff for theming
+$bv-palette-primary: mat-palette($md-mcgpalette0);
+$bv-palette-accent: mat-palette($md-mcgpalette1);
+
+// include the custom theme components into a theme object
+$bv-theme: mat-light-theme($bv-palette-primary, $bv-palette-accent);
+
+// include the custom theme object into the angular material theme
+@include angular-material-theme($bv-theme);
 .product-grid {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 50px 20px;
+}
+.activeNav {
+  background-color: #18a555;
+  color: white;
 }
 .container {
   width: 100%;
@@ -14,7 +123,10 @@
   margin-right: auto;
   margin-left: auto;
 }
-
+.imagenBanner {
+  max-height: 600px;
+  max-width: 1000px;
+}
 @media (min-width: 576px) {
   .product-grid {
     grid-template-columns: repeat(3, 1fr);
@@ -34,7 +146,6 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
 // form {
 //   display: flex;
 //   justify-content: center;
